fix: TxFlow submit button alignment, error message spacing (#2227)
* fix: TxFlow submit button alignment, error message spacing

* fix: Pass classname to ErrorMessage

--- a/src/components/tx-flow/common/TxLayout/styles.module.css
+++ b/src/components/tx-flow/common/TxLayout/styles.module.css
@@ -36,7 +36,7 @@
   margin-top: var(--space-3);
 }
 
-.step :global(.MuiCardActions-root) button[type='submit'] {
+.step :global(.MuiCardActions-root) > * {
   align-self: flex-end;
 }
 
